--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
-<HTML><TITLE>Aha with Aha</TITLE><BODY>
- 
-    <div style="position: fixed; z-index: -99; width: 100%; height: 100%">
-  <iframe
-    frameborder="0"
-    height="100%"
-    width="100%"
-    src="https://youtube.com/embed/A1i1GN7qxYo?autoplay=1&controls=0&showinfo=0&autohide=1"
-  >
-  </iframe>
-</div>
+<!DOCTYPE html>
+<HTML><TITLE>Aha with Aha</TITLE> 
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body, html {
+  height: 100%;
+  margin: 0;
+}
 
-  
-  </BODY></HTML>
+.bg {
+  /* The image used */
+  background-image: url("https://i.ytimg.com/vi/A1i1GN7qxYo/maxresdefault.jpg");
+
+  /* Full height */
+  height: 100%; 
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+</style>
+</head>
+<body>
+
+<div class="bg"></div>
+
+
+</body>
+</html>
