--- a/index.html
+++ b/index.html
@@ -1,27 +1,23 @@
 <!DOCTYPE html>
 <HTML><TITLE>Aha with Aha</TITLE> 
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body, html {
-  height: 100%;
-  margin: 0;
-}
 
-.bg {
-  /* The image used */
-  background-image: url("https://i.ytimg.com/vi/A1i1GN7qxYo/maxresdefault.jpg");
+  
+  
+ <div style="position: relative; width: 100%; height: 0; padding-top: 56.2225%;
+ padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFA8iYV10I&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFA8iYV10I&#x2F;view?utm_content=DAFA8iYV10I&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Blue and Red Colorful Blocks Fashion Retail Website</a> by Jacob 
+  
+  
+  
+  
+  
 
-  /* Full height */
-  height: 100%; 
 
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-</style>
-</head>
 <body>
 
 <div class="bg"></div>
